--- a/Jit/Examples/css/base.css
+++ b/Jit/Examples/css/base.css
@@ -100,8 +100,8 @@ a {
 
 
 #infovis {
-    position:fixed;
-    width:80%;
+    position:relative;
+    width:100%;
     height:100%;
     top:0px;
     right:0px;
