1. Identify loops in current Trace.  - DONE    2. Report Error in current trace in case there is  - DONE    3. Github Code Link - DONE    4. Populate random articles in suggestion box - DONE    5. Loading animation while tracing  - DONE

--- a/philowiki-api.css
+++ b/philowiki-api.css
@@ -24,3 +24,13 @@
   overflow: scroll;
   height: 200px;
 }
+
+#add-panelBody {
+  overflow: hidden;
+  height: 111px;
+}
+
+#displayed-items {
+  height: 125px;
+  overflow: scroll;
+}
